// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drop> -> delay]: 3000 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
  Object {
    "map": undefined,
    "name": "154hx1q",
    "next": undefined,
    "styles": "transition-delay:3000ms;",
  },
]
`;

exports[`<Drop> -> directions]: fromBottom (0 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromBottom (36 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "isw8fq",
    "next": undefined,
    "styles": "transform:translate3d(0,36px,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromBottom (36 string) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "isw8fq",
    "next": undefined,
    "styles": "transform:translate3d(0,36px,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromBottom (true) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromLeft (0 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromLeft (36 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "12diew7",
    "next": undefined,
    "styles": "transform:translate3d(-36px,0,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromLeft (36 string) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "12diew7",
    "next": undefined,
    "styles": "transform:translate3d(-36px,0,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromLeft (true) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "byivbi",
    "next": undefined,
    "styles": "transform:translate3d(-100%,0,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromRight (0 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromRight (36 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "1ridttw",
    "next": undefined,
    "styles": "transform:translate3d(36px,0,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromRight (36 string) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "1ridttw",
    "next": undefined,
    "styles": "transform:translate3d(36px,0,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromRight (true) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "10pt53e",
    "next": undefined,
    "styles": "transform:translate3d(100%,0,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromTop (0 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromTop (36 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "i15ueq",
    "next": undefined,
    "styles": "transform:translate3d(0,-36px,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromTop (36 string) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "i15ueq",
    "next": undefined,
    "styles": "transform:translate3d(0,-36px,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> directions]: fromTop (true) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "lupkji",
    "next": undefined,
    "styles": "transform:translate3d(0,-100%,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> distanceUnit]: px 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "isw8fq",
    "next": undefined,
    "styles": "transform:translate3d(0,36px,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> distanceUnit]: rem 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "rftkpn",
    "next": undefined,
    "styles": "transform:translate3d(0,36rem,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> hide [controlled]: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> hide: hidden 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> hide: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> show [controlled]: hidden 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> show: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> toggle [controlled]: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> toggle: hidden [2] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> toggle: hidden 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;

exports[`<Drop> -> toggle: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1tu8joi",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);;visibility:visible;;opacity:1;;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1opxxdc",
    "next": undefined,
    "styles": "transition-property:visibility, transform, opacity;",
  },
]
`;
